--- a/src/App.scss
+++ b/src/App.scss
@@ -8,6 +8,7 @@ header{
   line-height: 50px;
   background:#5d78ff;
   color:#ffffff;
+  z-index: 2000;
 }
 main{
   min-height: calc(100vh - 50px);
