--- a/src/pages/course.scss
+++ b/src/pages/course.scss
@@ -10,6 +10,7 @@
     padding: 4px 10px;
     margin: 3px;
     color: #ffffff;
+    display: inline-block;
     border:1px solid #16a085;
     background: #16a085;
     &.object__create{
