--- a/src/index.scss
+++ b/src/index.scss
@@ -447,6 +447,32 @@ label{
 .swal-title{
   margin-bottom: 15px;
 }
-.form-row{
+.form-row {
   margin-bottom: 15px;
+}
+.card--home{
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  padding: 15px;
+  border: 1px solid darkgray;
+}
+tr.disabled{
+  text-decoration: line-through;
+}
+.button-manage{
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  background: #8e44ad;
+  cursor: pointer;
+  color:#ffffff;
+  padding: .25rem .35rem!important;
+  &:hover,&:active,&:focus{
+    color: #ffffff;
+  }
+  i{
+    margin-right: 0;
+    vertical-align: middle;
+  }
 }
