--- a/src/App.scss
+++ b/src/App.scss
@@ -6,13 +6,18 @@ header{
   right: 0;
   height: 50px;
   line-height: 50px;
-  background:#5d78ff;
+  background-size: 100% 100%;
+  transition: all .5s;
+  background-image: linear-gradient(330deg, rgba(225, 225, 225, 0.05) 0%, rgba(225, 225, 225, 0.05) 33.333%,rgba(114, 114, 114, 0.05) 33.333%, rgba(114, 114, 114, 0.05) 66.666%,rgba(52, 52, 52, 0.05) 66.666%, rgba(52, 52, 52, 0.05) 99.999%),linear-gradient(66deg, rgba(181, 181, 181, 0.05) 0%, rgba(181, 181, 181, 0.05) 33.333%,rgba(27, 27, 27, 0.05) 33.333%, rgba(27, 27, 27, 0.05) 66.666%,rgba(251, 251, 251, 0.05) 66.666%, rgba(251, 251, 251, 0.05) 99.999%),linear-gradient(225deg, rgba(98, 98, 98, 0.05) 0%, rgba(98, 98, 98, 0.05) 33.333%,rgba(222, 222, 222, 0.05) 33.333%, rgba(222, 222, 222, 0.05) 66.666%,rgba(228, 228, 228, 0.05) 66.666%, rgba(228, 228, 228, 0.05) 99.999%),linear-gradient(90deg, rgb(28, 20, 63),rgb(40, 160, 253));
   color:#ffffff;
   z-index: 1;
+  &:hover{
+    background-size: 112% 112%;
+  }
 }
 main{
   min-height: calc(100vh - 50px);
-  margin-left: 270px;
+  margin-left: 350px;
   margin-top: 50px;
   .content{
     padding: 15px;
