--- a/src/pages/course.scss
+++ b/src/pages/course.scss
@@ -29,6 +29,7 @@
       background: #27ae60;
     }
     &.object__create{
+      overflow: auto;
       border: 1px solid;
       color: #16a085;
       background: #ffffff;
