--- a/src/index.scss
+++ b/src/index.scss
@@ -25,8 +25,9 @@ body {
   font-family: 'Roboto', sans-serif;
   transition: .5s;
   background-size: 100% 100%;
-  background-image: linear-gradient(44deg, rgba(114, 114, 114,0.02) 0%, rgba(114, 114, 114,0.02) 86%,transparent 86%, transparent 87%,rgba(147, 147, 147,0.02) 87%, rgba(147, 147, 147,0.02) 91%,rgba(63, 63, 63,0.02) 91%, rgba(63, 63, 63,0.02) 100%),linear-gradient(78deg, rgba(51, 51, 51,0.02) 0%, rgba(51, 51, 51,0.02) 51%,transparent 51%, transparent 74%,rgba(43, 43, 43,0.02) 74%, rgba(43, 43, 43,0.02) 94%,rgba(36, 36, 36,0.02) 94%, rgba(36, 36, 36,0.02) 100%),linear-gradient(166deg, rgba(152, 152, 152,0.02) 0%, rgba(152, 152, 152,0.02) 16%,transparent 16%, transparent 51%,rgba(109, 109, 109,0.02) 51%, rgba(109, 109, 109,0.02) 93%,rgba(132, 132, 132,0.02) 93%, rgba(132, 132, 132,0.02) 100%),linear-gradient(80deg, rgba(136, 136, 136,0.02) 0%, rgba(136, 136, 136,0.02) 28%,transparent 28%, transparent 35%,rgba(226, 226, 226,0.02) 35%, rgba(226, 226, 226,0.02) 95%,rgba(171, 171, 171,0.02) 95%, rgba(171, 171, 171,0.02) 100%),linear-gradient(90deg, rgb(255,255,255),rgb(255,255,255));
-  &:hover{
+  background-image: linear-gradient(44deg, rgba(114, 114, 114, 0.02) 0%, rgba(114, 114, 114, 0.02) 86%, transparent 86%, transparent 87%, rgba(147, 147, 147, 0.02) 87%, rgba(147, 147, 147, 0.02) 91%, rgba(63, 63, 63, 0.02) 91%, rgba(63, 63, 63, 0.02) 100%), linear-gradient(78deg, rgba(51, 51, 51, 0.02) 0%, rgba(51, 51, 51, 0.02) 51%, transparent 51%, transparent 74%, rgba(43, 43, 43, 0.02) 74%, rgba(43, 43, 43, 0.02) 94%, rgba(36, 36, 36, 0.02) 94%, rgba(36, 36, 36, 0.02) 100%), linear-gradient(166deg, rgba(152, 152, 152, 0.02) 0%, rgba(152, 152, 152, 0.02) 16%, transparent 16%, transparent 51%, rgba(109, 109, 109, 0.02) 51%, rgba(109, 109, 109, 0.02) 93%, rgba(132, 132, 132, 0.02) 93%, rgba(132, 132, 132, 0.02) 100%), linear-gradient(80deg, rgba(136, 136, 136, 0.02) 0%, rgba(136, 136, 136, 0.02) 28%, transparent 28%, transparent 35%, rgba(226, 226, 226, 0.02) 35%, rgba(226, 226, 226, 0.02) 95%, rgba(171, 171, 171, 0.02) 95%, rgba(171, 171, 171, 0.02) 100%), linear-gradient(90deg, rgb(255, 255, 255), rgb(255, 255, 255));
+
+  &:hover {
     background-size: 112% 112%;
   }
 }
@@ -366,6 +367,7 @@ template {
   font-size: 22px;
   padding: 10px 0;
   margin-bottom: 45px;
+
   &:after {
     content: "";
     position: absolute;
@@ -376,11 +378,13 @@ template {
     left: 0;
   }
 }
-label{
+
+label {
   font-size: 14px;
   color: #495057;
 }
-.edit-content{
+
+.edit-content {
   .nav .nav-link {
     color: #495057;
     text-transform: uppercase;
@@ -392,42 +396,50 @@ label{
     border-radius: 0;
     font-weight: 600;
     text-align: center;
+
     &:active,
     &:focus, {
       outline: none;
       box-shadow: none;
     }
-    &.active{
+
+    &.active {
       color: #ffffff;
       background: #495057;
     }
   }
 }
-.modal-90w{
-  width: 90vw!important;
-  max-width: unset!important;
+
+.modal-90w {
+  width: 90vw !important;
+  max-width: unset !important;
 }
-.user{
+
+.user {
   display: flex;
   align-items: center;
   position: relative;
   cursor: pointer;
   font-size: 15px;
-  &__avatar{
+
+  &__avatar {
     width: 40px;
     height: 40px;
     text-align: center;
     line-height: 40px;
     background: #ffffff;
+
     i {
       font-size: 20px;
       color: #000000;
     }
+
     -webkit-border-radius: 50px;
     -moz-border-radius: 50px;
     border-radius: 50px;
   }
-  &__dropdown{
+
+  &__dropdown {
     position: absolute;
     background: #ffffff;
     color: #000000;
@@ -435,12 +447,14 @@ label{
     right: 0;
     border-top: 3px solid #1e1e2d;
     box-shadow: 0 8px 6px -6px rgba(186, 186, 186, 0.36);
-    ul{
+
+    ul {
       text-align: center;
       margin: 0;
       padding: 0;
     }
-    li{
+
+    li {
       color: #1e1e2d;
       padding: 10px 30px;
       white-space: nowrap;
@@ -449,57 +463,149 @@ label{
     }
   }
 }
-.swal-title{
+
+.swal-title {
   margin-bottom: 15px;
 }
+
 .form-row {
   margin-bottom: 15px;
 }
-.card--home{
+
+.card--home {
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px;
   padding: 15px;
   border: 1px solid darkgray;
 }
-tr.disabled{
+
+tr.disabled {
   text-decoration: line-through;
 }
-.button-manage{
+
+.button-manage {
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
   background: #8e44ad;
   cursor: pointer;
-  color:#ffffff;
-  padding: .25rem .35rem!important;
-  &:hover,&:active,&:focus{
+  color: #ffffff;
+  padding: .25rem .35rem !important;
+
+  &:hover, &:active, &:focus {
     color: #ffffff;
   }
-  i{
+
+  i {
     margin-right: 0;
     vertical-align: middle;
   }
 }
-.modal{
-  .title{
+
+.modal {
+  .title {
     margin-bottom: 0;
   }
 }
-.assessment-quiz{
-  border:1px solid gray;
+
+.assessment-quiz {
+  border: 1px solid gray;
   display: inline-block;
+  height: 36px;
   padding: 0;
   margin: 5px;
-  span{
-    margin: 0!important;
+
+  span {
+    margin: 0 !important;
+    white-space: nowrap;
+    max-width: 250px;
+    text-overflow: ellipsis;
+    overflow: hidden;
   }
-  i{
+
+  i {
+    overflow: auto;
     cursor: pointer;
     line-height: 33px;
     padding: 0 8px;
-    color:red;
+    color: red;
     display: inline-block;
-    vertical-align: middle;
   }
 }
+
+.text-quiz {
+  white-space: nowrap;
+  max-width: 250px;
+  display: inline-block;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+
+@keyframes ldio-1gh3n65xyrd {
+  0% {
+    transform: rotate(0deg)
+  }
+  100% {
+    transform: rotate(360deg)
+  }
+}
+
+.ldio-1gh3n65xyrd > div > div {
+  position: absolute;
+  border-radius: 50%;
+}
+
+.ldio-1gh3n65xyrd > div > div:nth-child(1) {
+  top: 15.15px;
+  left: 15.15px;
+  width: 70.7px;
+  height: 70.7px;
+  background: #85a2b6;
+}
+
+.ldio-1gh3n65xyrd > div > div:nth-child(2) {
+  top: 20.099000000000004px;
+  left: 39.895px;
+  width: 21.21px;
+  height: 21.21px;
+  background: #bbcedd;
+  animation: ldio-1gh3n65xyrd 1s linear infinite;
+  transform-origin: 10.605px 30.401px;
+}
+
+.loadingio-spinner-disk-jemv7vccavb {
+  width: 101px;
+  height: 101px;
+  display: inline-block;
+  overflow: hidden;
+  background: transparent;
+}
+
+.ldio-1gh3n65xyrd {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  transform: translateZ(0) scale(1);
+  backface-visibility: hidden;
+  transform-origin: 0 0; /* see note above */
+}
+
+.ldio-1gh3n65xyrd div {
+  box-sizing: content-box;
+}
+
+/* generated by https://loading.io/ */
+.page-loading {
+  position: fixed;
+  z-index: 5000;
+  top: 0;
+  left: 0;
+  display: grid;
+  place-items: center;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, .4);
+}
+
+/* generated by https://loading.io/ */
